fix topic sidenav gap

--- a/components/training/TopicSidenav.module.css
+++ b/components/training/TopicSidenav.module.css
@@ -16,7 +16,7 @@
 
     display: flex;
     flex-direction: column;
-    gap: 1em;
+    gap: 1rem;
     padding: 20px;
 }
 
